--- a/5.1.1
+++ b/5.1.1
@@ -1,5 +1,5 @@
-[CYS](HIP-HOP)(S.A)(REGISTRO)!  MOVIMIENTO.
-[PLATA](TRAP)(REUNIÓN-SECRETA)(REGISTRO DE SOCIEDADES)!  PERSERVACIÓN.
-[ARTE](UNDERGROUND)(MEMBRESÍA)(INVOLUCRADOS)!  ACTIVOS.
-[INFO.](ARTISTAS-URBANOS)(PARTICIPES)(REFERENTES)!  INFLUENCIA.
-[TRANSPORTE](EMPRESA)(DÍADA)(GRUPOS)!  ANCLA.
+[CYS](HIP-HOP)(S.A)(REGISTRO);!  MOVIMIENTO.
+[PLATA](TRAP)(REUNIÓN-SECRETA)(REGISTRO DE SOCIEDADES);!  PERSERVACIÓN.
+[ARTE](UNDERGROUND)(MEMBRESÍA)(INVOLUCRADOS);!  ACTIVOS.
+[INFO.](ARTISTAS-URBANOS)(PARTICIPES)(REFERENTES);!  INFLUENCIA.
+[TRANSPORTE](EMPRESA)(DÍADA)(GRUPOS);!  ANCLA.
